		getNeighborsAndCorrespondingPositionsMaxDistance(...)   -> getMooreNeighborsAndLocations
		getNeighborsAndCorrespondingPositionsHamitonianDistance(...)  -> getVonNeumannNeighborsAndLocations
		getNeighborsAndCorrespondingPositionsHexagonalDistance(...)   -> getHexagonalNeighborsAndLocations

		IN CONTINUOUS2D and CONTINUOUS3D:
		getObjectsExactlyWithinDistance(...)    ->	getNeighborsExactlyWithinDistance
		getObjectsWithinDistance(...)           ->	getNeighborsWithinDistance
	Added boundedness checks for 3D grid neighborhood lookup, oops	
	Bug fix to SparseGrid[2|3]D and Continuous[2|3]D, which were calling
		getObjectsAtLocation() without checking to see if its return
		value was null.  Thanks to Javier <kuu.kuu@gmail.com>
	Added getRadialNeighbors, getRadialLocations, and getRadialNeighborsAndLocations
		to the various grid classes.
	Modified SimpleEdgePortrayal so that the basewidth is 1.0 and also to add
		different kinds of line ends.
	Added sim.util.distribution to classdocs.  Thanks to Stephen Davies <stephen@umw.edu>
	Added SimpleController.getSimulation() and Console.getSimulation().  Not a big fan
		of this, but it's necessary for some flexibility.
	Removed vestigial nonsense from ValuePortayal2D
	Updated MersenneTwisterFast to version 21
	Changed usage of StringBuffer to StringBuilder
	Bug fix to deprecated versions of neighborhood methods in grids caused by refactoring
		described earlier.  Wasn't returning Bags in some cases.
	Further modifications to SimpleEdgePortrayal2D, adding in the concept of "thin lines".
		Thanks to Joey Harrison <jharri1@gmu.edu.>
	Antialiasing option removed from charting: they're now all antialiased.
	Added Bar chart and pie chart facilities
	Added (untested) SwitchedPortrayal3D
	On Macs, inspectors now have small title bars
	On Linux, FastValueGridPortrayal2D now uses stretched buffering like Macs
	addSeries returns just SeriesAttributes on all ChartGenerators